fix h1 overlap

--- a/asset/base.css
+++ b/asset/base.css
@@ -15,7 +15,7 @@ p {word-wrap:break-word;}
 #sidebar li { list-style-type: none; }
 #footer {margin:3em 0 0;text-align:center;color:#666;}
 #footer p {max-width:100%;}
-.title {font-size:1.5em;margin:1em 0 0em;}
+.title {font-size:1.5em;margin:1em 0 0em;line-height:1em;}
 .editor {min-height:300px;padding-top:5px;}
 .editor .tag{border-bottom:1px dashed #444;}
 .date {color:#888;font-size:0.6em;}
